--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>tajvirsahota.github.io</title>
+<title>tajvirsahotithub.io</title>
 </head>
 <body>
 <h1>Hello World</h1>
