--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 <h1>🚧 Under Construction 🚧</h1>
-<p>...</p>
+<p>Smart Pill Dispenser</p>
+ <p1>smart pill dispneser app</p1>
+  <p2>smart ev network app with google app publish </p2>
+   <p3>3d printed modern lightgun for retro games</p3>
 </body>
 </html>
