--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 <h1>🚧 Under Construction 🚧</h1>
 <p>Smart Pill Dispenser</p>
- <p1>smart pill dispneser app</p1>
-  <p2>smart ev network app with google app publish </p2>
-   <p3>3d printed modern lightgun for retro games</p3>
+<p>smart pill dispneser app</p>
+<p>smart ev network app with google app publish</p>
+<p>3d printed modern lightgun for retro games</p>
 </body>
 </html>
