--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <title>Tajvir's Github Pages Site</title>
 </head>
+
+<ul>
+  <li> <a https://tajvirsahota.github.io/> Home </a> </li>
+</ul>
+  
 <body>
 <h1>🚧 Under Construction 🚧</h1>
 <p>Smart Pill Dispenser</p>
