--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Tajvir's Github Pages Site</title>
   
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/home.css">
   
 </head>
 
