--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <ul>
-  <li> <a https://tajvirsahota.github.io/> Home </a> </li>
+  <li> <a href="https://tajvirsahota.github.io/"> Home </a> </li>
 </ul>
   
 <body>
