--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tajvir's Github Pages Site</title>
+    <title>Tajvir's Github Pages Site</title>
   
-<link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/home.css">
   
 </head>
 
@@ -12,6 +12,16 @@
 </ul>
   
 <body>
+
+  <nav>
+    <ul>
+      <li> <a href="https://tajvirsahota.github.io/"> Home </a> </li>
+      <li> <a href="https://tajvirsahota.github.io/"> Projects </a> </li>
+      <li> <a href="https://tajvirsahota.github.io/"> Side Projects </a> </li>
+      <li> <a href="https://tajvirsahota.github.io/"> About Me </a> </li>
+    </ul>
+  </nav>
+  
 <h1>🚧 Under Construction 🚧</h1>
 <p>Smart Pill Dispenser</p>
 <br>
