--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     <ul>
       <li> <a href="https://tajvirsahota.github.io/"> Home </a> </li>
-      <li> <a href="https://tajvirsahota.github.io/"> Projects </a> </li>
+      <li> <a href="https://tajvirsahota.github.io/projects.html"> Projects </a> </li>
       <li> <a href="https://tajvirsahota.github.io/"> Side Projects </a> </li>
       <li> <a href="https://tajvirsahota.github.io/"> Photography </a> </li>
       <li> <a href="https://tajvirsahota.github.io/"> About Me </a> </li>
