--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <ul>
       <li> <a href="https://tajvirsahota.github.io/"> Home </a> </li>
       <li> <a href="https://tajvirsahota.github.io/projects.html"> Projects </a> </li>
-      <li> <a href="https://tajvirsahota.github.io/"> Side Projects </a> </li>
-      <li> <a href="https://tajvirsahota.github.io/"> Photography </a> </li>
-      <li> <a href="https://tajvirsahota.github.io/"> About Me </a> </li>
+      <li> <a href="https://tajvirsahota.github.io/sideprojects.html"> Side Projects </a> </li>
+      <li> <a href="https://tajvirsahota.github.io/photography.html"> Photography </a> </li>
+      <li> <a href="https://tajvirsahota.github.io/aboutme.html"> About Me </a> </li>
     </ul>
   </nav>
     
