--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,15 @@
     </ul>
   </nav>
 
+<p>Smart Pill Dispenser</p>
+  <br>
+<p>smart pill dispneser app</p>
+  <br>
+<p>smart ev network app with google app publish</p>
+  <br>
+
+    
+  
 </body>
 
 </html>
